# dinosaurs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml
api_gateway/: nginx.conf
dinopedia/dinopedia/: config.py  settings.py  urls.py
dinopedia/dinosaurs/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
dinopedia/dinosaurs/migrations/: 0001_initial.py  0002_dinosaur_image1_dinosaur_image2.py  0002_user_favorite_dinosaurs.py  0003_alter_dinosaur_image1_alter_dinosaur_image2.py  0004_alter_dinosaur_name.py  0005_alter_dinosaur_options.py
